# VibeWriter

./: .gitignore  CLAUDE.md  HISTORY.md  PROGRESS.md  README.md  config.py  main.py  pyproject.toml
.claude/commands/: check.md  commit.md  progress.md  step-doc.md  sync-docs.md
agents/: analysis.py  crawler.py  parser.py  planner.py  quality.py  style_guide.py  writer.py
data/input/: blog_urls.example.txt
docs/dev/: _template.md  phase1-step1-2.md  phase1-step3.md  phase1-step4.md  phase1-step5.md  phase2-step1.md  phase2-step2.md  phase2-step3.md  phase2-step4.md
docs/git/: COMMIT_CONVENTION.md  GITHUB_SETUP.md
docs/guides/: mac-mini-ollama-setup.md
docs/prompt/: PROPMTS.md
docs/roadmap/: DESIGN_SPEC.md  PIPELINE_OVERVIEW.md  PROJECT_PLAN.md
etc/: HISTORY.md  PROGRESS.md
utils/: file_manager.py  humanize.py  logger.py  ollama_client.py
