[project]
name = "vibewriter"
version = "0.1.0"
description = "블로그 글쓰기 스타일을 학습하고 일관된 스타일의 블로그 글을 자동 생성하는 AI 멀티 에이전트 시스템"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vibewriter = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
